--- a/style.css
+++ b/style.css
@@ -62,9 +62,13 @@ nav span {
 }
 .gamedecision {
   padding: 1rem 2rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-around;
 }
 .info {
-  font-size: 2vw;
+  font-size: 4vw;
   font-weight: bold;
   padding-right: 2rem;
 }
